--- a/public/styles/init.less
+++ b/public/styles/init.less
@@ -811,3 +811,7 @@ background-position: 0 40px; }
   color: red;
 }
 label.label { display: inline; }
+
+#e2-secondStep select {
+  margin-right: 4px;
+}
