Cleaned up home.jade

--- a/views/home.jade
+++ b/views/home.jade
@@ -123,7 +123,7 @@ section#homeContent
     .span12
       .hero-unit
         img(src="/wiring/walkLED.png")
-      p Use the example wiring from above and the provided example in  
+      p Use the example wiring from above and the provided code in  
         code examples/walkLED.js
         |  for getting started using noduino. Read values from an analog input device like a potentiometer and watch for pressed buttons, all basic functions are shown in the example files. The needed 
         code .fzz
@@ -144,13 +144,14 @@ section#homeContent
   .row
     .span12
       p The 
-        a(href="#") noduino
+        a(href="https://github.com/semu/noduino") noduino
         |  project was founded by 
-        a(href="#") Sebastian Müller
-        |  for fun and as a proof of concept for Node.js controlling external components over a dynamic web interface using HTML5 WebSockets. Thanks to the awesome 
-        a(href="#") Arduino
+        a(href="http://semu.mp") Sebastian Müller
+        |  in 2012 for fun and as a proof of concept for Node.js controlling external components over a dynamic web interface using HTML5 WebSockets. Thanks to the awesome 
+        a(href="http://arduino.cc/") Arduino
         |  project and the German 
-        a(href="#") Fritzing Project
+        a(href="http://fritzing.org") Fritzing Project
         |  it's easy to get started with basic prototyping. The already existing 
         a(href="#") duino
-        |  project helped developing the first steps and is now an imported part of noduino's core components. Thanks to the Open Source community, you made this possible! Keep the good work up…
+        |  project helped developing the first steps and is now an imported part of noduino's core components. Thanks to the Open Source community, you made this possible. Keep up the good work!
+      p Some might think <em>What the f*ck is happening here? Are you insane?</em> But I can assure you I'm not crazy, my mom had me tested…
