Updated duino. Added getting-started page

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,6 +15,8 @@ html(lang="en")
             ul.nav
               li(class=(active == 'home' ? 'active' : ''))
                 a(href="/") Home
+              li(class=(active == 'getting-started' ? 'active' : ''))
+                a(href="/getting-started.html") Getting Started                
               li.dropdown(class=(active == 'examples' ? 'active' : ''))
                 a.dropdown-toggle(href="#",data-toggle="dropdown") Example Wirings 
                   b.caret
@@ -37,17 +39,17 @@ html(lang="en")
           a(href="http://arduino.cc")
             img(src="/images/arduino.jpg", style="position: relative; margin-right: 18px; top: 5px; margin-left: 4px; border-radius: 3px;")
         p The 
-          a(href="#") noduino
+          a(href="https://semu.github.com/noduino") noduino
           |  project is founded and maintained by
-          a(href="#") Sebastian Müller
+          a(href="http://semu.mp") Sebastian Müller
           | .
         p Code licensed under the 
           a(href="http://www.opensource.org/licenses/mit-license.php") MIT License
           |  and available on 
-          a(href="#") GitHub
+          a(href="https://github.com/semu/noduino") GitHub
           |  for free.  
         p Layout based on 
-          a(href="#") twitter bootstrap framework
+          a(href="http://twitter.github.com/bootstrap/") twitter bootstrap framework
           | . Icons from 
-          a(href="#") Glyphicons Free
+          a(href="http://glyphicons.com/") Glyphicons Free
           | .
