--- a/views/home.jade
+++ b/views/home.jade
@@ -155,3 +155,4 @@ section#homeContent
         a(href="#") duino
         |  project helped developing the first steps and is now an imported part of noduino's core components. Thanks to the Open Source community, you made this possible. Keep up the good work!
       p Some might think <em>What the f*ck is happening here? Are you insane?</em> But I can assure you I'm not crazy, my mom had me tested…
+      p Please keep in mind Noduino is in a very early development state, all code is highly alpha and you should not build something serious on it. There are several known bugs, if you run into any problems with the provided examples just restart Noduino and try again ;) Did I mention is an early alpha version?
