--- a/views/getting-started.jade
+++ b/views/getting-started.jade
@@ -26,7 +26,7 @@
   h1 What's next? 
 .row
   .span12
-    p Cleaning code and rewrite most of the core parts. There is so much to do, you can help as well! Included objects like 
+    p Cleaning up code and rewrite most of the core parts would be. There is so much to do, you can help as well! Included objects like 
       code LED
       |  and 
       code Button
