--- a/views/home.jade
+++ b/views/home.jade
@@ -30,7 +30,9 @@ section#homeContent
     .span3
       p 
         a(href="https://github.com/semu/noduino") Download noduino
-        | , install needed packages with npm, upload <code>duino/src/du.ino</code> to your Arduino and you are good to go…
+        | , install needed packages with npm, fetch git submodules, upload duino's file <code>duino/src/du.ino</code> to your Arduino and you are good to go. An example on how to catch and fire events with an HTML interface is provided as well. Take a look at 
+        a(href="/examples/walkLED.html") LED Walker
+        | …
     .span9
       pre.prettyprint.linenums=examples.node
   .row
@@ -152,7 +154,7 @@ section#homeContent
         |  project and the German 
         a(href="http://fritzing.org") Fritzing Project
         |  it's easy to get started with basic prototyping. The already existing 
-        a(href="#") duino
+        a(href="https://github.com/ecto/duino") duino
         |  project helped developing the first steps and is now an imported part of noduino's core components. Thanks to the Open Source community, you made this possible. Keep up the good work!
       p Some might think <em>What the f*ck is happening here? Are you insane?</em> But I can assure you I'm not crazy, my mom had me tested…
       p Please keep in mind Noduino is in a very early development state, all code is highly alpha and you should not build something serious on it. There are several known bugs, if you run into any problems with the provided examples just restart Noduino and try again ;) Did I mention is an early alpha version?
