--- a/views/layout.jade
+++ b/views/layout.jade
@@ -40,16 +40,16 @@ html(lang="en")
             img(src="/images/arduino.jpg", style="position: relative; margin-right: 18px; top: 5px; margin-left: 4px; border-radius: 3px;")
         p The 
           a(href="https://semu.github.com/noduino") noduino
-          |  project is founded and maintained by
+          |  project was founded in 2012 and is maintained by
           a(href="http://semu.mp") Sebastian Müller
           | .
-        p Code licensed under the 
+        p All Noduino code is licensed under the 
           a(href="http://www.opensource.org/licenses/mit-license.php") MIT License
           |  and available on 
           a(href="https://github.com/semu/noduino") GitHub
           |  for free.  
-        p Layout based on 
-          a(href="http://twitter.github.com/bootstrap/") twitter bootstrap framework
-          | . Icons from 
+        p Icons from 
           a(href="http://glyphicons.com/") Glyphicons Free
-          | .
+          | . Layout based on 
+          a(href="http://twitter.github.com/bootstrap/") twitter bootstrap framework
+          | . 
