--- a/views/home.jade
+++ b/views/home.jade
@@ -31,7 +31,7 @@ section#homeContent
       p 
         a(href="https://github.com/semu/noduino") Download noduino
         | , install needed packages with npm, fetch git submodules, upload duino's file <code>duino/src/du.ino</code> to your Arduino and you are good to go. An example on how to catch and fire events with an HTML interface is provided as well. Take a look at 
-        a(href="/examples/walkLED.html") LED Walker
+        a(href="/example-walkLED.html") LED Walker
         | …
     .span9
       pre.prettyprint.linenums=examples.node
@@ -137,7 +137,7 @@ section#homeContent
   .row
     .span12
       p.exampleLinks
-        a.btn.btn-success(href="/examples/walkLED.html")
+        a.btn.btn-success(href="/example-walkLED.html")
           i.icon-gift.icon-white
           |  View Example
   .page-header
