--- a/styles/init.less
+++ b/styles/init.less
@@ -767,7 +767,7 @@ body {
 position: relative;
 padding-top: 90px;
 background-color: white;
-background-image: url(/images/grid-18px-masked.png);
+background-image: url(../images/grid-18px-masked.png);
 background-repeat: repeat-x;
 background-position: 0 40px; }
 .jumbotron {
