Fixed bugs in templates for github export

--- a/views/example-walkLED.jade
+++ b/views/example-walkLED.jade
@@ -5,7 +5,7 @@ header#overview
   .row
     .span12
       .hero-unit
-        img(src="/wiring/walkLED.png")
+        img(src="wiring/walkLED.png")
       p Use the example wiring from above and this interface for getting startet with noduino. Read values from an analog input device like a potentiometer and watch for pressed buttons, all basic functions are shown within this example. The needed 
         code .fzz
         |  file for making changes with the awesome 
