--- a/views/home.jade
+++ b/views/home.jade
@@ -3,15 +3,15 @@ header.jumbotron.subhead#overview
   p.lead A simple and flexible JavaScript and Node.js Framework for accessing basic Arduino controls from Web Applications using HTML5, Socket.IO and Node.js.
 .row.marketing#homeBoxes
   .span4
-    img.bs-icon(src="/images/glyphicons_155_show_thumbnails.png")
+    img.bs-icon(src="images/glyphicons_155_show_thumbnails.png")
     h2 Easy Arduino Access
     p Initialize your Arduino board, define registered pins and send commands. Use digital and analog read or write to control buttons or switch connected LEDs. <strong>Listen for events</strong> happening on your Arduino to control your Web Application with analog controls…
   .span4
-    img.bs-icon(src="/images/glyphicons_214_resize_small.png")
+    img.bs-icon(src="images/glyphicons_214_resize_small.png")
     h2 Client and Server in JS
     p Thanks to Node.js and modern web browsers all server code as well as all client code is written in JavaScript. There is no difference in accessing your Arduino over <strong>WebSocket</strong> or a <strong>Serial</strong> connection. All methods and objects remain the same, written code is highly portable.
   .span4
-    img.bs-icon(src="/images/glyphicons_009_magic.png")
+    img.bs-icon(src="images/glyphicons_009_magic.png")
     h2 JS Proof of Concept
     p The first release of 
       a(href="") noduino
@@ -31,7 +31,7 @@ section#homeContent
       p 
         a(href="https://github.com/semu/noduino") Download noduino
         | , install needed packages with npm, fetch git submodules, upload duino's file <code>duino/src/du.ino</code> to your Arduino and you are good to go. An example on how to catch and fire events with an HTML interface is provided as well. Take a look at 
-        a(href="/example-walkLED.html") LED Walker
+        a(href="example-walkLED.html") LED Walker
         | …
     .span9
       pre.prettyprint.linenums=examples.node
@@ -124,7 +124,7 @@ section#homeContent
   .row
     .span12
       .hero-unit
-        img(src="/wiring/walkLED.png")
+        img(src="wiring/walkLED.png")
       p Use the example wiring from above and the provided code in  
         code examples/walkLED.js
         |  for getting started using noduino. Read values from an analog input device like a potentiometer and watch for pressed buttons, all basic functions are shown in the example files. The needed 
@@ -137,7 +137,7 @@ section#homeContent
   .row
     .span12
       p.exampleLinks
-        a.btn.btn-success(href="/example-walkLED.html")
+        a.btn.btn-success(href="example-walkLED.html")
           i.icon-gift.icon-white
           |  View Example
   .page-header
