--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,15 +14,15 @@ html(lang="en")
           div.nav-collapse
             ul.nav
               li(class=(active == 'home' ? 'active' : ''))
-                a(href="/") Home
+                a(href="index.html") Home
               li(class=(active == 'getting-started' ? 'active' : ''))
-                a(href="/getting-started.html") Getting Started                
+                a(href="getting-started.html") Getting Started                
               li.dropdown(class=(active == 'examples' ? 'active' : ''))
                 a.dropdown-toggle(href="#",data-toggle="dropdown") Example Wirings 
                   b.caret
                 ul.dropdown-menu
                   li
-                    a(href="/example-walkLED.html") Adjustable LED Walker
+                    a(href="example-walkLED.html") Adjustable LED Walker
               li
                 a(href="https://github.com/semu/noduino") View on GitHub &raquo;
             div.nav-collapse.pull-right
@@ -30,14 +30,14 @@ html(lang="en")
                 li
                   a(href="http://semu.mp") semu.mp
       a(href="#")
-        img(style="position: absolute; top: 0; right: 0; border: 0; z-index: 10;",src="/images/forkme.png",alt="Fork me on GitHub")          
+        img(style="position: absolute; top: 0; right: 0; border: 0; z-index: 10;",src="images/forkme.png",alt="Fork me on GitHub")          
     .container!=body
       footer.footer
         p.pull-right
           a(href="#") Back to top
         p.pull-left
           a(href="http://arduino.cc")
-            img(src="/images/arduino.jpg", style="position: relative; margin-right: 18px; top: 5px; margin-left: 4px; border-radius: 3px;")
+            img(src="images/arduino.jpg", style="position: relative; margin-right: 18px; top: 5px; margin-left: 4px; border-radius: 3px;")
         p The 
           a(href="https://semu.github.com/noduino") noduino
           |  project was founded in 2012 and is maintained by
