--- a/views/home.jade
+++ b/views/home.jade
@@ -32,12 +32,12 @@ section#homeContent
         a(href="https://github.com/semu/noduino") Download noduino
         | , install needed packages with npm, fetch git submodules, upload duino's file <code>duino/src/du.ino</code> to your Arduino and you are good to go. An example on how to catch and fire events with an HTML interface is provided as well. Take a look at 
         a(href="example-walkLED.html") LED Walker
-        | …
+        | .
     .span9
       pre.prettyprint.linenums=examples.node
   .row
     .span3
-      p See the included exmaples on this page or have a look at the example wiring for firing and catching events on your Arduino!
+      p See the included examples on this page or have a look at the example wiring for firing and catching events on your Arduino!
     .span9
       pre.prettyprint.linenums=examples.connect
   .row.example
@@ -106,7 +106,7 @@ section#homeContent
   .row
     .span3
       p Buttons and LEDs provide a simple interface to listen for events. Use <code>Button.on()</code> or <code>LED.on()</code> for triggering your code if a button is pushed or your LED is switching modes. Multiple events for a single event are called the order they have been assigned.
-      p Use <code>Board.receive()</code> for catching all incoming data streams. You probably need this if you plan to create a <strong>Real-Time Web Application</strong> with noduino. Buzzword…
+      p Use <code>Board.receive()</code> for catching all incoming data streams. You probably need this if you plan to create a <strong>Real-Time Web Application</strong> with noduino. Buzzword...
     .span9
       pre.prettyprint.linenums=examples.listenButton
   .row.example
@@ -131,7 +131,7 @@ section#homeContent
         code .fzz
         |  file for making changes with the awesome 
         a(href="http://fritzing.org") Fritzing Application
-        |  is included as well! If you create other wirings or find bugs in the provided ones please greate a 
+        |  is included as well! If you create other wirings or find bugs in the provided ones please create a 
         a(href="http://github.com/semu/noduino") Pull Request on GitHub
         | !
   .row
