--- a/views/example-walkLED.jade
+++ b/views/example-walkLED.jade
@@ -66,7 +66,7 @@ header#overview
         
   .page-header
     h1 Just Node.js 
-      small Acces Arduino components without HTML5 interface 
+      small Access Arduino components without HTML5 interface 
   .row
     .span12
       p The wiring above can be used to test the included HTML web interface and the Node.js access as well. Connect your Arduino to you computer and start catching events happening on your Arduino with JavaScript. For sure you can easily fire events on your Arduino too!
