--- a/views/example-walkLED.jade
+++ b/views/example-walkLED.jade
@@ -55,7 +55,7 @@ header#overview
       p This interface is defined in 
         code views/example-walkLED.jade
         | , all needed JavaScript is stored in 
-        code public/scrupts/app.walkLED.js
+        code public/scripts/app.walkLED.js
         |  using 
         a(href="http://requirejs.org/") RequireJS
         |  for loading dependencies. Please see RequireJS's manual for loading your scripts. Logging is done with the customized 
