added motor wiring and using Digitial Output

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,6 +23,8 @@ html(lang="en")
                 ul.dropdown-menu
                   li
                     a(href="example-walkLED.html") Adjustable LED Walker
+                  li
+                    a(href="example-motor.html") Adjustable Motor
               li
                 a(href="https://github.com/semu/noduino") View on GitHub &raquo;
             div.nav-collapse.pull-right
