updated 'just node' section of example motor html page to have correct steps to run (was previously copied from walkled

--- a/views/example-motor.jade
+++ b/views/example-motor.jade
@@ -62,6 +62,6 @@ header#overview
         | $ > git submodule update --init
         | $ > npm install
         | $ > cd examples/
-        | $ > node test.walkLED.js
-      p After starting <code>test.walkLED.js</code> you are able to push the buttons in your wiring and see the LEDs blinking as you commanded. Use the analog input for changing walking speed. Binding events work as you might know from using Mootools, use <code>AnalogInput.on()</code>, <code>LED.on()</code> and <code>Button.on()</code> to bind custom functions to events like <em>on</em>, <em>off</em>, <em>change</em>, <em>push</em> or <em>release</em>. Not all functions are documented or even demonstrated with an example application, for getting used to noduino make sure to have a look at <code>test.blinkLED.js</code> and <code>test.readAnalogIn.js</code>.
+        | $ > node test.motor.js
+      p After starting <code>test.motor.js</code> the motor will toggle on and off every 5 seconds.
         
