removed hardcoded localhost reference
Start server with node srv.web.js [hostname] [port] to set different hostname/port.

i.e. node srv.web.js 192.168.0.1 8081

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,7 @@ html(lang="en")
     link(rel="stylesheet", href="styles/prettify.css")
     link(rel="stylesheet", href="styles/init.css")
     script(data-main="scripts/app." + jsApp, type="text/javascript", src="scripts/vendor/require-jquery.js")
-    script(type="text/javascript", src="http://localhost:8090/socket.io/socket.io.js")
+    script(type="text/javascript", src="//" + hostname + ":8090/socket.io/socket.io.js")
   body
     .navbar.navbar-fixed-top(style="z-index: 4;position:absolute;")
       .navbar-inner
