--- a/views/getting-started.jade
+++ b/views/getting-started.jade
@@ -16,6 +16,10 @@
       img(src="images/getting-started/2.png")
     h2 Start Noduino and have fun!
     p Start Noduino's WebSocket Server with <code>node srv.web.js</code>, connect your prepared Arduino, open <a href="http://localhost:8080">http://localhost:8080</a> with your browser and have fun. If you run into any problems during the provided examples please restart <code>srv.web.js</code>, there are some known issues on getting a connection if your browser has already connected or you are using multiple tabs. Keep in mind that Noduino is highly alpha software…
+    p If you want to access Noduino from a different computer or run it on a server (i.e. Raspberry Pi) you need to set the hostname and port like this:
+    p <code>node srv.web.js [hostname] [port]</code>
+    p  For example:
+    p <code>node srv.web.js 192.168.0.100 8081</code>
     br 
     .hero-unit
       img(src="images/getting-started/3.png")
